--- a/Core/Resources/Validation.resx
+++ b/Core/Resources/Validation.resx
@@ -117,11 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CodeAlreadyExists" xml:space="preserve">
+    <value>Code already exists.</value>
+  </data>
   <data name="NotFound" xml:space="preserve">
     <value>Could not find record.</value>
-  </data>
-  <data name="PhoneNumberInvalid" xml:space="preserve">
-    <value>Phone Number Invalid</value>
   </data>
   <data name="RouteParameterMustMatchFormDataParameter" xml:space="preserve">
     <value>Route parameter must match form data parameter.</value>
