--- a/Web/Resources/Pages/Index.fr.resx
+++ b/Web/Resources/Pages/Index.fr.resx
@@ -117,7 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Welcome" xml:space="preserve">
-    <value>Bienvenue</value>
+  <data name="CCGMember" xml:space="preserve">
+    <value>Membre de la GCC</value>
+  </data>
+  <data name="ExternalCandidate" xml:space="preserve">
+    <value>Candidat externe</value>
+  </data>
+  <data name="IndexTitle" xml:space="preserve">
+    <value>Outil de compétence professionnelle</value>
+  </data>
+  <data name="Question1" xml:space="preserve">
+    <value>Pour commencer, veuillez sélectionner l’un des rôles</value>
+  </data>
+  <data name="Student" xml:space="preserve">
+    <value>Étudiant</value>
+  </data>
+  <data name="WelcomeText" xml:space="preserve">
+    <value>Bienvenue dans l'outil de compétence professionnelle. Cet outil est conçu pour vous permettre de rechercher et de comparer divers postes au sein de la Garde côtière canadienne.</value>
   </data>
 </root>
