--- a/Web/Resources/Pages/Mockups/Member_Position.fr.resx
+++ b/Web/Resources/Pages/Mockups/Member_Position.fr.resx
@@ -145,7 +145,7 @@
     <value>Soutien technologique et scientifique (EG)</value>
   </data>
   <data name="ExecutiveEX" xml:space="preserve">
-    <value>Groupe exécutif, sous-ministre-commissaire (EX)</value>
+    <value>Groupe exécutif (EX)</value>
   </data>
   <data name="GLabourGL" xml:space="preserve">
     <value>Manœuvres et hommes de métier (GL)</value>
