--- a/Web/Resources/Pages/Mockups/Member_Position.resx
+++ b/Web/Resources/Pages/Mockups/Member_Position.resx
@@ -145,7 +145,7 @@
     <value>Engineering and Scientific Support (EG)</value>
   </data>
   <data name="ExecutiveEX" xml:space="preserve">
-    <value>Executive Group, Deputy Minister-Commissioner (EX)</value>
+    <value>Executive Group (EX)</value>
   </data>
   <data name="GLabourGL" xml:space="preserve">
     <value>General Labour and Trades (GL)</value>
