--- a/Web/Resources/Pages/CCGMember/AllPositions.fr.resx
+++ b/Web/Resources/Pages/CCGMember/AllPositions.fr.resx
@@ -117,22 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CCGMember" xml:space="preserve">
-    <value>Membre de la GCC</value>
+  <data name="Administrative Services" xml:space="preserve">
+    <value>Services administratifs</value>
   </data>
-  <data name="ExternalCandidate" xml:space="preserve">
-    <value>Candidat externe</value>
+  <data name="AllPositions" xml:space="preserve">
+    <value>Dans quel domaine est votre poste actuel?</value>
   </data>
-  <data name="IndexTitle" xml:space="preserve">
-    <value>Outil de compétence professionnelle</value>
+  <data name="Computer Systems" xml:space="preserve">
+    <value>Systèmes informatiques</value>
   </data>
-  <data name="Question1" xml:space="preserve">
-    <value>Pour commencer, dites-nous qui vous êtes</value>
+  <data name="Engineering and Scientific Support" xml:space="preserve">
+    <value>Assistance technique et scientifique</value>
   </data>
-  <data name="Student" xml:space="preserve">
-    <value>Étudiant</value>
+  <data name="Filter" xml:space="preserve">
+    <value>Filtrer</value>
   </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Bienvenue dans l'outil de compétence professionnelle. Cet outil est conçu pour vous permettre de rechercher et de comparer divers postes au sein de la Garde côtière canadienne.</value>
+  <data name="General Labour and Trades" xml:space="preserve">
+    <value>Travail général et métiers</value>
+  </data>
+  <data name="General Services" xml:space="preserve">
+    <value>Services généraux</value>
+  </data>
+  <data name="General Technical" xml:space="preserve">
+    <value>Technique générale</value>
+  </data>
+  <data name="Keywords" xml:space="preserve">
+    <value>Mots clé(s)</value>
+  </data>
+  <data name="Lightkeepers" xml:space="preserve">
+    <value>Les gardiens de phare</value>
+  </data>
+  <data name="NoResults" xml:space="preserve">
+    <value>Aucun résultat correspondant trouvé</value>
+  </data>
+  <data name="Purchasing and Supply" xml:space="preserve">
+    <value>Achat et approvisionnement</value>
+  </data>
+  <data name="Ships' Crews" xml:space="preserve">
+    <value>Équipages de navires</value>
+  </data>
+  <data name="Ships' Officers" xml:space="preserve">
+    <value>Officiers de navire</value>
   </data>
 </root>
