--- a/Web/Resources/Pages/CCGMember/AllPositions.resx
+++ b/Web/Resources/Pages/CCGMember/AllPositions.resx
@@ -117,22 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CCGMember" xml:space="preserve">
-    <value>Membre de la GCC</value>
+  <data name="Administrative Services" xml:space="preserve">
+    <value>Administrative Services</value>
   </data>
-  <data name="ExternalCandidate" xml:space="preserve">
-    <value>Candidat externe</value>
+  <data name="AllPositions" xml:space="preserve">
+    <value>In what field is your current position?</value>
   </data>
-  <data name="IndexTitle" xml:space="preserve">
-    <value>Outil de compétence professionnelle</value>
+  <data name="Computer Systems" xml:space="preserve">
+    <value>Computer Systems</value>
   </data>
-  <data name="Question1" xml:space="preserve">
-    <value>Pour commencer, dites-nous qui vous êtes</value>
+  <data name="Engineering and Scientific Support" xml:space="preserve">
+    <value>Engineering and Scientific Support</value>
   </data>
-  <data name="Student" xml:space="preserve">
-    <value>Étudiant</value>
+  <data name="Filter" xml:space="preserve">
+    <value>Filter</value>
   </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Bienvenue dans l'outil de compétence professionnelle. Cet outil est conçu pour vous permettre de rechercher et de comparer divers postes au sein de la Garde côtière canadienne.</value>
+  <data name="General Labour and Trades" xml:space="preserve">
+    <value>General Labour and Trades</value>
+  </data>
+  <data name="General Services" xml:space="preserve">
+    <value>General Services</value>
+  </data>
+  <data name="General Technical" xml:space="preserve">
+    <value>General Technical</value>
+  </data>
+  <data name="Keywords" xml:space="preserve">
+    <value>Keyword(s)</value>
+  </data>
+  <data name="Lightkeepers" xml:space="preserve">
+    <value>Lightkeepers</value>
+  </data>
+  <data name="NoResults" xml:space="preserve">
+    <value>No matching results found</value>
+  </data>
+  <data name="Purchasing and Supply" xml:space="preserve">
+    <value>Purchasing and Supply</value>
+  </data>
+  <data name="Ships' Crews" xml:space="preserve">
+    <value>Ships' Crews</value>
+  </data>
+  <data name="Ships' Officers" xml:space="preserve">
+    <value>Ships' Officers</value>
   </data>
 </root>
