--- a/Web/Resources/Pages/CCGMember/SearchType.resx
+++ b/Web/Resources/Pages/CCGMember/SearchType.resx
@@ -117,22 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CCGMember" xml:space="preserve">
-    <value>Membre de la GCC</value>
+  <data name="Available" xml:space="preserve">
+    <value>What positions are available to me now</value>
   </data>
-  <data name="ExternalCandidate" xml:space="preserve">
-    <value>Candidat externe</value>
-  </data>
-  <data name="IndexTitle" xml:space="preserve">
-    <value>Outil de compétence professionnelle</value>
+  <data name="Compare" xml:space="preserve">
+    <value>Compare my position to another position</value>
   </data>
   <data name="Question1" xml:space="preserve">
-    <value>Pour commencer, dites-nous qui vous êtes</value>
+    <value>How would you like to perform your search?</value>
   </data>
-  <data name="Student" xml:space="preserve">
-    <value>Étudiant</value>
-  </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Bienvenue dans l'outil de compétence professionnelle. Cet outil est conçu pour vous permettre de rechercher et de comparer divers postes au sein de la Garde côtière canadienne.</value>
+  <data name="Similar" xml:space="preserve">
+    <value>Find similar positions to my current position</value>
   </data>
 </root>
