--- a/Web/Resources/Pages/Candidate/Index.resx
+++ b/Web/Resources/Pages/Candidate/Index.resx
@@ -117,22 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CCGMember" xml:space="preserve">
-    <value>Membre de la GCC</value>
-  </data>
-  <data name="ExternalCandidate" xml:space="preserve">
-    <value>Candidat externe</value>
-  </data>
-  <data name="IndexTitle" xml:space="preserve">
-    <value>Outil de compétence professionnelle</value>
-  </data>
   <data name="Question1" xml:space="preserve">
-    <value>Pour commencer, dites-nous qui vous êtes</value>
+    <value>Which area would you like to explore?</value>
   </data>
-  <data name="Student" xml:space="preserve">
-    <value>Étudiant</value>
+  <data name="Seagoing" xml:space="preserve">
+    <value>Seagoing Positions</value>
   </data>
-  <data name="WelcomeText" xml:space="preserve">
-    <value>Bienvenue dans l'outil de compétence professionnelle. Cet outil est conçu pour vous permettre de rechercher et de comparer divers postes au sein de la Garde côtière canadienne.</value>
+  <data name="Shoreside" xml:space="preserve">
+    <value>Shoreside Positions</value>
   </data>
 </root>
