--- a/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="h2Text" xml:space="preserve">
-    <value>Select a position</value>
+    <value>Select your objective position</value>
   </data>
 </root>
