--- a/Web/Resources/Pages/CCGMember/Compare/ObjectiveLevel.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectiveLevel.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="h2Text" xml:space="preserve">
-    <value>Select a level</value>
+    <value>Select a level and position</value>
   </data>
   <data name="Level" xml:space="preserve">
     <value>Level</value>
