--- a/Web/Resources/Pages/CCGMember/Compare/ObjectiveLevel.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectiveLevel.fr.resx
@@ -123,4 +123,10 @@
   <data name="Level" xml:space="preserve">
     <value>Niveau</value>
   </data>
+  <data name="Select Level" xml:space="preserve">
+    <value>Sélectionnez un niveau</value>
+  </data>
+  <data name="Select Position" xml:space="preserve">
+    <value>Sélectionner une position</value>
+  </data>
 </root>
