--- a/Web/Resources/Pages/CCGMember/CurrentLevel.fr.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentLevel.fr.resx
@@ -120,10 +120,19 @@
   <data name="h2Text" xml:space="preserve">
     <value>Sélectionnez votre niveau et votre position actuels</value>
   </data>
+  <data name="Level" xml:space="preserve">
+    <value>Niveau</value>
+  </data>
   <data name="Next" xml:space="preserve">
     <value>Suivant</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
+  </data>
+  <data name="Select Level" xml:space="preserve">
+    <value>Sélectionnez un niveau</value>
+  </data>
+  <data name="Select Position" xml:space="preserve">
+    <value>Sélectionner une position</value>
   </data>
 </root>
