--- a/Web/Resources/Pages/CCGMember/CurrentLevel.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentLevel.resx
@@ -120,10 +120,19 @@
   <data name="h2Text" xml:space="preserve">
     <value>Select your current level and position</value>
   </data>
+  <data name="Level" xml:space="preserve">
+    <value>Level</value>
+  </data>
   <data name="Next" xml:space="preserve">
     <value>Next</value>
   </data>
   <data name="Previous" xml:space="preserve">
     <value>Previous</value>
+  </data>
+  <data name="Select Level" xml:space="preserve">
+    <value>Select Level</value>
+  </data>
+  <data name="Select Position" xml:space="preserve">
+    <value>Select Position</value>
   </data>
 </root>
