--- a/Web/Resources/Pages/CCGMember/Compare/Delta.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.resx
@@ -117,13 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BEHAVIOURAL ELEMENTS" xml:space="preserve">
+    <value>BEHAVIOURAL ELEMENTS</value>
+  </data>
+  <data name="CERTIFICATIONS" xml:space="preserve">
+    <value>CERTIFICATIONS</value>
+  </data>
+  <data name="Current Position" xml:space="preserve">
+    <value>Current Position</value>
+  </data>
+  <data name="DIFFERING COMPETENCIES" xml:space="preserve">
+    <value>DIFFERING COMPETENCIES</value>
+  </data>
   <data name="h2Results" xml:space="preserve">
     <value>Results Comparing Two Positions</value>
+  </data>
+  <data name="KNOWLEDGE ELEMENTS" xml:space="preserve">
+    <value>KNOWLEDGE ELEMENTS</value>
+  </data>
+  <data name="MATCHING COMPETENCIES" xml:space="preserve">
+    <value>MATCHING COMPETENCIES</value>
   </data>
   <data name="NoDiff" xml:space="preserve">
     <value>No differing competencies</value>
   </data>
   <data name="NoMatch" xml:space="preserve">
     <value>No matching competencies</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Previous</value>
+  </data>
+  <data name="Print PDF" xml:space="preserve">
+    <value>Print PDF</value>
+  </data>
+  <data name="Save PDF" xml:space="preserve">
+    <value>Save PDF</value>
+  </data>
+  <data name="Selected Position" xml:space="preserve">
+    <value>Selected Position</value>
+  </data>
+  <data name="TECHNICAL ELEMENTS" xml:space="preserve">
+    <value>TECHNICAL ELEMENTS</value>
   </data>
 </root>
