--- a/Web/Resources/Pages/CCGMember/Compare/ObjectiveLevel.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectiveLevel.resx
@@ -123,4 +123,10 @@
   <data name="Level" xml:space="preserve">
     <value>Level</value>
   </data>
+  <data name="Select Level" xml:space="preserve">
+    <value>Select Level</value>
+  </data>
+  <data name="Select Position" xml:space="preserve">
+    <value>Select Position</value>
+  </data>
 </root>
