--- a/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.resx
@@ -120,4 +120,13 @@
   <data name="h2Text" xml:space="preserve">
     <value>Select a level and position</value>
   </data>
+  <data name="Level" xml:space="preserve">
+    <value>Level</value>
+  </data>
+  <data name="Position" xml:space="preserve">
+    <value>Position</value>
+  </data>
+  <data name="Select Position" xml:space="preserve">
+    <value>Select Position</value>
+  </data>
 </root>
