--- a/Web/Resources/Pages/CCGMember/CurrentPosition.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentPosition.resx
@@ -123,4 +123,16 @@
   <data name="Level" xml:space="preserve">
     <value>Level</value>
   </data>
+  <data name="Position" xml:space="preserve">
+    <value>Position</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Previous</value>
+  </data>
+  <data name="Select Level" xml:space="preserve">
+    <value>Select Level</value>
+  </data>
+  <data name="Select Position" xml:space="preserve">
+    <value>Select Position</value>
+  </data>
 </root>
