--- a/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/Delta.fr.resx
@@ -126,6 +126,9 @@
   <data name="Current Position" xml:space="preserve">
     <value>Position actuelle</value>
   </data>
+  <data name="Current Position Level" xml:space="preserve">
+    <value>Niveau de poste actuel</value>
+  </data>
   <data name="DIFFERING COMPETENCIES" xml:space="preserve">
     <value>COMPÉTENCES DIFFÉRENTES</value>
   </data>
@@ -144,6 +147,9 @@
   <data name="NoMatch" xml:space="preserve">
     <value>Aucune compétence correspondante</value>
   </data>
+  <data name="Position Level" xml:space="preserve">
+    <value>Niveau du poste</value>
+  </data>
   <data name="Previous" xml:space="preserve">
     <value>Précédent</value>
   </data>
@@ -155,6 +161,9 @@
   </data>
   <data name="Selected Position" xml:space="preserve">
     <value>Position sélectionnée</value>
+  </data>
+  <data name="Selected Position Level" xml:space="preserve">
+    <value>Niveau de position sélectionné</value>
   </data>
   <data name="TECHNICAL ELEMENTS" xml:space="preserve">
     <value>ÉLÉMENTS TECHNIQUES</value>
