--- a/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.fr.resx
+++ b/Web/Resources/Pages/CCGMember/Compare/ObjectivePosition.fr.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Compare" xml:space="preserve">
+    <value>Comparer les positions</value>
+  </data>
   <data name="h2Text" xml:space="preserve">
     <value>Sélectionnez un niveau et une position</value>
   </data>
   <data name="Level" xml:space="preserve">
     <value>Niveau</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>Suivant</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Précédent</value>
   </data>
   <data name="Select Level" xml:space="preserve">
     <value>Sélectionnez un niveau</value>
