--- a/Web/Resources/Pages/CCGMember/CurrentPosition.resx
+++ b/Web/Resources/Pages/CCGMember/CurrentPosition.resx
@@ -123,6 +123,9 @@
   <data name="Level" xml:space="preserve">
     <value>Level</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Next</value>
+  </data>
   <data name="Position" xml:space="preserve">
     <value>Position</value>
   </data>
